# startupai-project-controller

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
config/: board-automation-config.json  codex_session_result.schema.json  critical-paths.json  project-field-sync-config.json
docs/adr/: 001-architecture.md  001-control-plane-extraction.md  002-hard-end-state-hardening.md  002-hexagonal-lite-refactor.md
systemd/: startupai-consumer.service
tests/: test_architecture_boundaries.py  test_board_automation.py  test_board_consumer.py  test_board_control_plane.py  test_board_graph.py  test_board_io.py  test_board_mutation_adapter.py  test_characterization_hot_paths.py  test_cli_surface.py  test_consumer_db.py  test_consumer_workflow.py  test_contract_outputs.py  test_domain_repair_policy.py  test_github_cli.py  test_github_cli_adapter.py  test_github_http.py  test_github_transport.py  test_launch_policy_char.py  test_limited_live_test.py  test_live_burnin_followups.py  test_local_process_adapter.py  test_project_field_sync.py  test_promote_ready.py  test_pull_requests.py  test_repair_policy_char.py  test_rescue_policy_char.py  test_resolution_policy_char.py  test_review_queue_policy_char.py  test_review_state.py  test_review_state_adapter.py  test_scheduling_policy_char.py  test_sqlite_store_adapter.py  test_system_service_adapter.py  test_validate_burnin_review_anomalies.py  test_validate_critical_path_promotion.py  test_verdict_policy_char.py
tools/: __init__.py  limited_live_test.py  validate_burnin_review_anomalies.py
(+174 files in other folders)
