[project]
name = "startupai-project-controller"
version = "0.1.0"
description = "StartupAI Project Board Controller — GitHub Project automation across 3 repos"
readme = "README.md"
authors = [{ name = "Chris Walker", email = "chris@startupai.site" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
board-consumer = "startupai_controller.board_consumer:main"
board-automation = "startupai_controller.board_automation:main"
board-control-plane = "startupai_controller.board_control_plane:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/startupai_controller"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "responses>=0.25.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]
